Update package versions in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-fastapi
-uvicorn
-requests
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+websocket-client==1.6.4
+python-dotenv==1.0.0
+requests==2.31.0
