--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ websockets==12.0
 python-dotenv==1.0.0
 requests==2.31.0
 firebase-admin==6.5.0
-
-
+aiohttp==3.9.1
+pydantic==2.5.3
+python-multipart==0.0.6
