--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,11 @@
 [phases.setup]
-cmds = ["pip install -r requirements.txt"]
+cmds = [
+    "python -m pip install --upgrade pip",
+    "pip install -r requirements.txt"
+]
 
 [phases.install]
 cmds = ["echo 'Installation complete'"]
 
-[phases.build]
-cmds = ["echo 'Build complete'"]
-
 [start]
-cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1"
+cmd = "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 1"
